# ply_parser

./: .gitmodules  CMakeLists.txt  Maoni.cmake
CMake/: Extract.cmake
data/: faces.txt  header.ply  parser.txt  stream.stream
doc/: CMakeLists.txt  chunk.qbk  junkload.bib  junkload.tex  parsing.tex  ply.qbk  ply_chunk.qbk  ply_model.qbk  stream.txt
examples/libMaoni/: ply.cpp
include/: element_parser.hpp  iterator.hpp
include/junk/: element_parser.hpp  iterator.hpp  loader.hpp  mmap_allocator.hpp  out_iterator.hpp
include/nff/: config.hpp  nff.hpp  nff_parser.hpp
include/ply/: adapted.hpp  byte_order.hpp  config.hpp  element.hpp  element_grammar.hpp  header_grammar.hpp  index.hpp  io_operators.hpp  loader.hpp  meta.hpp  model.hpp  parse_element.hpp  parse_header.hpp  ply.hpp  ply_parser.hpp  property.hpp  property_grammar.hpp  property_parsers.hpp  spirit.hpp  symbols.hpp  types.hpp
include/stream/: spirit.hpp  stream.hpp  stream_adapted.hpp
libs/: mapped_file.cpp  quicksort.cpp
libs/nff/: CMakeLists.txt  nff_parser.cpp
libs/ply/: CMakeLists.txt  ply_parser.cpp
parsing/: 1_introduction.tex  2_related_work.tex  3_generic_parsing.tex  4_generic_programming.tex  5_implementation.tex  6_ply_example.tex  7_conclusion.tex  CMakeLists.txt  bibliography.bib  parsing.tex
recycle_bin/: adapt_la_mat.hpp  adapt_la_vec.hpp  stream.cpp  stream_adapted.hpp
tests/: CMakeLists.txt  binary.cpp  complete.cpp  cookie.cpp  element.cpp  element_parser.cpp  header.cpp  loader.cpp  mmap.cpp  mpl_ply.cpp  named_setter.cpp  out_iterator.cpp  parser_parser.cpp  placeholder.cpp  ply_gz.cpp  ply_spirit.cpp  precompiled.hpp  rule.cpp  stream.cpp  stream_spirit.cpp
tools/nff/: CMakeLists.txt  nff2nff.cpp  nff2obj.cpp
tools/ply/: CMakeLists.txt  ply2obj.cpp  ply2ply.cpp  ply2raw.cpp  plyheader.cpp
